--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Siva Oruganti | Unity Game Developer</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
 
+    <section id="hero">
+        <h1>Siva Oruganti</h1>
+        <h2>Unity Game Developer | Physics & Simulation Systems</h2>
+
+        <p>
+            I build sensor-driven, physics-based systems and gameplay mechanics in Unity using C#.
+        </p>
+
+        <div class="buttons">
+            <a href="#projects">View Projects</a>
+            <a href="https://github.com/sivaoruganti6067-sys" target="_blank">GitHub</a>
+            <a href="#" target="_blank">Resume</a>
+        </div>
+    </section>
+
+</body>
+</html>
