--- a/index.html
+++ b/index.html
@@ -23,45 +23,53 @@
     </section>
 <section id="projects">
     <h2>Projects</h2>
+    <!-- GAME DEVELOPMENT -->
+    <div class="project-category">
+        <h3>Game Development</h3>
 
-    <div class="project-card">
-        <h3>Sensor-Based Vehicle Controller using Unity</h3>
-        <p>
-            A physics-driven vehicle navigation system built in Unity using C#.
-            The vehicle navigates intelligently without using waypoints, splines,
-            or NavMesh, relying on raycast-based sensors and custom logic.
-        </p>
-        <p class="tech">Unity · C# · Physics · Raycasting</p>
+        <div class="project-card">
+            <h4>Sensor-Based Vehicle Controller using Unity</h4>
+            <p>
+                A physics-driven vehicle navigation system built in Unity using C#.
+                The vehicle navigates using raycast-based sensors and custom physics logic,
+                without relying on waypoints, splines, or NavMesh.
+            </p>
+            <p class="tech">Unity · C# · Physics · Raycasting</p>
 
-        <div class="project-links">
-            <a href="#" target="_blank">View Details</a>
-            <a href="#" target="_blank">GitHub</a>
+            <div class="project-links">
+                <a href="vehicle-controller.html">View Details</a>
+                <a href="#" target="_blank">GitHub</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <h4>Snake Game (Unity)</h4>
+            <p>
+                A classic Snake game developed in Unity with smooth movement,
+                collision handling, score tracking, and UI integration.
+            </p>
+            <p class="tech">Unity · C# · Gameplay Programming</p>
+
+            <div class="project-links">
+                <a href="#" target="_blank">GitHub</a>
+            </div>
         </div>
     </div>
+    <!-- UI/UX DESIGN -->
+    <div class="project-category">
+        <h3>UI / UX Design</h3>
 
-    <div class="project-card">
-        <h3>Snake Game (Unity)</h3>
-        <p>
-            A classic Snake game developed in Unity with smooth movement,
-            collision handling, score tracking, and UI integration.
-        </p>
-        <p class="tech">Unity · C# · Gameplay Programming</p>
+        <div class="project-card">
+            <h4>UI/UX Design Projects</h4>
+            <p>
+                A collection of UI/UX design projects created using Figma,
+                focusing on clean layouts, usability, and visual hierarchy.
+            </p>
+            <p class="tech">Figma · UI Design · UX Principles</p>
 
-        <div class="project-links">
-            <a href="#" target="_blank">GitHub</a>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <h3>UI/UX Design Projects</h3>
-        <p>
-            A collection of UI/UX design projects created using Figma,
-            focusing on clean layouts, usability, and visual hierarchy.
-        </p>
-        <p class="tech">Figma · UI Design · UX Principles</p>
-
-        <div class="project-links">
-            <a href="#" target="_blank">View Designs</a>
+            <div class="project-links">
+                <a href="#" target="_blank">View Designs</a>
+            </div>
         </div>
     </div>
 </section>
