--- a/index.html
+++ b/index.html
@@ -6,21 +6,34 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+    
     <section id="hero">
+    <div class="hero-left">
         <h1>Siva Oruganti</h1>
-        <h2>Unity Game Developer | Physics & Simulation Systems</h2>
 
-        <p>
-            I build sensor-driven, physics-based systems and gameplay mechanics in Unity using C#.
+        <h2 class="hero-role">
+            Game Developer | UI / UX Designer
+        </h2>
+
+        <p class="hero-description">
+            Final-year Computer Science student passionate about building immersive
+            games and interactive experiences through strong gameplay systems
+            and thoughtful UI/UX design.
         </p>
 
-        <div class="buttons">
-            <a href="#projects">View Projects</a>
+        <div class="hero-buttons">
+            <a href="#projects">Projects</a>
             <a href="https://github.com/sivaoruganti6067-sys" target="_blank">GitHub</a>
             <a href="#" target="_blank">Resume</a>
+            <a href="mailto:sivaoruganti6067@gmail.com">Contact</a>
         </div>
-    </section>
+    </div>
+
+    <div class="hero-right">
+        <img src="assets/images/profile.png" alt="Siva Oruganti">
+    </div>
+</section>
+
 <section id="projects">
     <h2>Projects</h2>
     <!-- GAME DEVELOPMENT -->
