--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
 </head>
 <body>
     
-    <section id="hero">
+    <section id="hero" class="hero-cinematic">
     <div class="hero-left">
-        <h1>Siva Oruganti</h1>
+        <p class="hero-intro">Hi, I am</p>
+
+        <h1 class="hero-name">
+            ORUGANTI <span>SIVA</span>
+        </h1>
 
         <h2 class="hero-role">
-            Game Developer | UI / UX Designer
+            Game Developer / UI & UX Designer
         </h2>
 
         <p class="hero-description">
-            Final-year Computer Science student passionate about building immersive
-            games and interactive experiences through strong gameplay systems
-            and thoughtful UI/UX design.
+            Final-year Computer Science & Engineering student passionate about building
+            immersive games and interactive experiences by blending strong gameplay
+            systems with thoughtful UI/UX design.
         </p>
 
         <div class="hero-buttons">
@@ -33,6 +37,7 @@
         <img src="assets/images/profile.png" alt="Siva Oruganti">
     </div>
 </section>
+
 
 <section id="projects">
     <h2>Projects</h2>
