--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="hero-right">
-        <img src="assets/images/profile.png" alt="Siva Oruganti">
+        <img src="assets/images/profile.jpg" alt="Siva Oruganti">
     </div>
 </section>
 
